src/styles.css
* {
  margin: 0;
  padding: 0;
  font-family: 'Nunito', sans-serif;
  color: #21683d;
  font-size: 16pt
}

body {
  background-color: #fffbfb;
  height: 100vh;
  margin: 0;
}

.container {
  display: flex;
  flex-direction: column;
}

.main-nav {
  display: flex;
  background-color: #a5db9c;
  width: 100%;
  height: 90px;
  margin-top: 5px;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  margin: 0px;
}

.search {
  display: flex;
  justify-content: row;
  align-items: center;
  background-color: #a5db9c;
  margin-left: 5%;
}

#searchInput{
  font-size: 12pt
}

#searchButton {
  font-size: 12pt
}

h1 {
  color: #21683d;
  font-family: 'Dancing Script', cursive;
  font-size: 65px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin-bottom: 3%;
  text-shadow: #a5db9c 5px 0 10px;
  opacity: 1;
  animation: fadeIn 3s;
  margin-left: 30px;
}

.upper-nav-button {
  width: 191px;
  height: 30px;
  font-size: 19px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  background-color: #e9f0e7;
  border: 2px solid #3eb23e;
  border-radius: 45%;
  font-family: 'Kanit', sans-serif;
  cursor: pointer;
}

.recipe-area {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.recipe-card {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  height: 300px;
  width: 300px;
  margin: 20px;
  cursor: pointer;
  border: solid green 2px;
  box-shadow: 10px 10px 5px 3px rgb(8, 50, 8);
  animation: fadeIn 3s;
}

.recipe-title {
  text-align: center;
  font-size: 20px;
  text-shadow: #a5db9c 1px 0 10px;
}

.recipe-image {
  height: 70%;
  width: 70%;
}

.tag-area {
  display: flex;
  flex-direction: column;
  width: 40%;
  height: 75px;
  flex-wrap: wrap;
  margin-left: 30%;
  align-content: space-between;
  justify-content: space-between;
  align-items: stretch;
  text-align: center;
}

.tag-card {
  cursor: pointer;
  border-radius: 25%;
  text-shadow: #a5db9c 5px 0 10px;
}

.tag-card:hover,
.tag-active {
  background-color: #d8fcd1;
}

.tag-text {
  font-size: 13pt;
}
/* Recipe cards when clicked */
.recipe-image-blowup {
  height: 200px;
  width: 200px;
}
.recipe-image-section {
  display: flex;
  justify-content: center;
}

.recipe-card-blowup {
  margin-left: 15%;
  width: 80%;
  border: solid green 2px;
  box-shadow: 10px 10px 5px 3px rgb(8, 50, 8);
}

#recipeCardTags,
#recipeCardIngredients,
#recipeCardTotalCost,
#recipeCardTitle {
  text-align: center;
}

#recipeCardTitle {
  font-size: 25pt;
}

#recipeCardInstructions {
  margin-left: 2%;
  margin-right: 2%;
  text-align: justify;
}

.icon-section {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.icon {
  height: 50px;
  width: 50px;
  padding: 40px;
}

.spacer {
  height: 50px;
  width: 200px
}

.instructions {
  font-weight: bolder;
  font-size: 23pt;
}

.error {
  font-size: 30px;
  margin-top: 10px;
  text-align: center;
}

.print-footer {
  display: none;
  text-align: center;
  font-size: 12pt;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    visibility: hidden;
  }
  100% {
    opacity: 1;
    visibility: visible;
  }
}


/* Hidden Property */
.hidden {
  display: none;
}

